// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`welcome in bento snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f4f4f5",
          },
        ]
      }
    >
      <View
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            false,
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 26,
              "paddingHorizontal": 24,
              "paddingTop": 18,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "minHeight": 48,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                  },
                  {
                    "minHeight": 36,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityLabel="Expyrico"
                align="xMidYMid"
                bbHeight={36}
                bbWidth={36}
                focusable={false}
                height={36}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 36,
                      "width": 36,
                    },
                  ]
                }
                vbHeight={865}
                vbWidth={865}
                width={36}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    matrix={
                      [
                        1,
                        0,
                        0,
                        1,
                        0,
                        190,
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                      fill={
                        {
                          "payload": 4283671941,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                      fill={
                        {
                          "payload": 4294090009,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                      fill={
                        {
                          "payload": 4291968547,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                      fill={
                        {
                          "payload": 4281019943,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              style={
                {
                  "color": "#0a0a0a",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                }
              }
            >
              expyrico
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 999,
                    "borderWidth": 1,
                    "justifyContent": "center",
                    "minHeight": 34,
                    "paddingHorizontal": 14,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#e4e4e7",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#0a0a0a",
                    "fontSize": 12,
                    "fontWeight": "500",
                  }
                }
              >
                Fresh
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "paddingTop": 46,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderWidth": 1,
                    "elevation": 8,
                    "justifyContent": "center",
                    "shadowColor": "#000000",
                    "shadowOffset": {
                      "height": 12,
                      "width": 0,
                    },
                    "shadowOpacity": 0.12,
                    "shadowRadius": 24,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#e4e4e7",
                    "borderRadius": 22,
                    "height": 128,
                    "width": 128,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 10,
                    },
                    {
                      "minHeight": 94,
                    },
                  ]
                }
              >
                <RNSVGSvgView
                  accessibilityLabel="Expyrico"
                  align="xMidYMid"
                  bbHeight={94}
                  bbWidth={94}
                  focusable={false}
                  height={94}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      {
                        "flex": 0,
                        "height": 94,
                        "width": 94,
                      },
                    ]
                  }
                  vbHeight={865}
                  vbWidth={865}
                  width={94}
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      matrix={
                        [
                          1,
                          0,
                          0,
                          1,
                          0,
                          190,
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                        fill={
                          {
                            "payload": 4283671941,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                      <RNSVGPath
                        d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                        fill={
                          {
                            "payload": 4294090009,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                      <RNSVGPath
                        d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                        fill={
                          {
                            "payload": 4291968547,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                      <RNSVGPath
                        d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                        fill={
                          {
                            "payload": 4281019943,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
            <Text
              style={
                {
                  "color": "#0a0a0a",
                  "fontSize": 40,
                  "fontWeight": "700",
                  "lineHeight": 48,
                  "marginTop": 26,
                  "textAlign": "center",
                }
              }
            >
              Eat fresh, waste less.
            </Text>
            <Text
              style={
                {
                  "color": "#71717a",
                  "fontSize": 16,
                  "lineHeight": 24,
                  "marginTop": 10,
                  "textAlign": "center",
                }
              }
            >
              Keep your pantry visible, catch expiry dates early, and choose what to use next.
            </Text>
          </View>
          <View
            style={
              {
                "gap": 12,
                "marginTop": 36,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 999,
                    "borderWidth": 1.5,
                    "height": 58,
                    "overflow": "hidden",
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#F5A623",
                    "borderColor": "#F5A623",
                    "elevation": 6,
                    "shadowColor": "#F5A623",
                    "shadowOffset": {
                      "height": 8,
                      "width": 0,
                    },
                    "shadowOpacity": 0.28,
                    "shadowRadius": 18,
                  },
                ]
              }
            >
              <View
                accessibilityLabel="Create account"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "height": 58,
                      "justifyContent": "center",
                      "paddingHorizontal": 24,
                      "width": "100%",
                    },
                    false,
                  ]
                }
                testID="welcome-sign-up"
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "700",
                        "height": 58,
                        "includeFontPadding": false,
                        "lineHeight": 58,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      {
                        "color": "#2C2C28",
                      },
                    ]
                  }
                >
                  Create account
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "borderRadius": 999,
                    "borderWidth": 1.5,
                    "height": 58,
                    "overflow": "hidden",
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "rgba(75,174,138,0.12)",
                    "borderColor": "#4BAE8A",
                  },
                ]
              }
            >
              <View
                accessibilityLabel="Sign in"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "height": 58,
                      "justifyContent": "center",
                      "paddingHorizontal": 24,
                      "width": "100%",
                    },
                    false,
                  ]
                }
                testID="welcome-sign-in"
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "700",
                        "height": 58,
                        "includeFontPadding": false,
                        "lineHeight": 58,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      {
                        "color": "#4BAE8A",
                      },
                    ]
                  }
                >
                  Sign in
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`welcome in clay snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#fff7f0",
          },
        ]
      }
    >
      <View
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            false,
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 26,
              "paddingHorizontal": 24,
              "paddingTop": 18,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "minHeight": 48,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                  },
                  {
                    "minHeight": 36,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityLabel="Expyrico"
                align="xMidYMid"
                bbHeight={36}
                bbWidth={36}
                focusable={false}
                height={36}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 36,
                      "width": 36,
                    },
                  ]
                }
                vbHeight={865}
                vbWidth={865}
                width={36}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    matrix={
                      [
                        1,
                        0,
                        0,
                        1,
                        0,
                        190,
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                      fill={
                        {
                          "payload": 4283671941,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                      fill={
                        {
                          "payload": 4294090009,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                      fill={
                        {
                          "payload": 4291968547,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                      fill={
                        {
                          "payload": 4281019943,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              style={
                {
                  "color": "#5b3a1f",
                  "fontSize": 20,
                  "fontWeight": "700",
                  "lineHeight": 28,
                }
              }
            >
              expyrico
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 999,
                    "borderWidth": 1,
                    "justifyContent": "center",
                    "minHeight": 34,
                    "paddingHorizontal": 14,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#fde0c2",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#ea580c",
                    "fontSize": 13,
                    "fontWeight": "700",
                  }
                }
              >
                Fresh
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "paddingTop": 46,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderWidth": 1,
                    "elevation": 8,
                    "justifyContent": "center",
                    "shadowColor": "#000000",
                    "shadowOffset": {
                      "height": 12,
                      "width": 0,
                    },
                    "shadowOpacity": 0.12,
                    "shadowRadius": 24,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#fde0c2",
                    "borderRadius": 28,
                    "height": 128,
                    "width": 128,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 10,
                    },
                    {
                      "minHeight": 94,
                    },
                  ]
                }
              >
                <RNSVGSvgView
                  accessibilityLabel="Expyrico"
                  align="xMidYMid"
                  bbHeight={94}
                  bbWidth={94}
                  focusable={false}
                  height={94}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      {
                        "flex": 0,
                        "height": 94,
                        "width": 94,
                      },
                    ]
                  }
                  vbHeight={865}
                  vbWidth={865}
                  width={94}
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      matrix={
                        [
                          1,
                          0,
                          0,
                          1,
                          0,
                          190,
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                        fill={
                          {
                            "payload": 4283671941,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                      <RNSVGPath
                        d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                        fill={
                          {
                            "payload": 4294090009,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                      <RNSVGPath
                        d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                        fill={
                          {
                            "payload": 4291968547,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                      <RNSVGPath
                        d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                        fill={
                          {
                            "payload": 4281019943,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
            <Text
              style={
                {
                  "color": "#5b3a1f",
                  "fontSize": 44,
                  "fontWeight": "800",
                  "lineHeight": 52,
                  "marginTop": 26,
                  "textAlign": "center",
                }
              }
            >
              Eat fresh, waste less.
            </Text>
            <Text
              style={
                {
                  "color": "#a47148",
                  "fontSize": 17,
                  "lineHeight": 26,
                  "marginTop": 10,
                  "textAlign": "center",
                }
              }
            >
              Keep your pantry visible, catch expiry dates early, and choose what to use next.
            </Text>
          </View>
          <View
            style={
              {
                "gap": 12,
                "marginTop": 36,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 999,
                    "borderWidth": 1.5,
                    "height": 58,
                    "overflow": "hidden",
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#F5A623",
                    "borderColor": "#F5A623",
                    "elevation": 6,
                    "shadowColor": "#F5A623",
                    "shadowOffset": {
                      "height": 8,
                      "width": 0,
                    },
                    "shadowOpacity": 0.28,
                    "shadowRadius": 18,
                  },
                ]
              }
            >
              <View
                accessibilityLabel="Create account"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "height": 58,
                      "justifyContent": "center",
                      "paddingHorizontal": 24,
                      "width": "100%",
                    },
                    false,
                  ]
                }
                testID="welcome-sign-up"
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "700",
                        "height": 58,
                        "includeFontPadding": false,
                        "lineHeight": 58,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      {
                        "color": "#2C2C28",
                      },
                    ]
                  }
                >
                  Create account
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "borderRadius": 999,
                    "borderWidth": 1.5,
                    "height": 58,
                    "overflow": "hidden",
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "rgba(75,174,138,0.12)",
                    "borderColor": "#4BAE8A",
                  },
                ]
              }
            >
              <View
                accessibilityLabel="Sign in"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "height": 58,
                      "justifyContent": "center",
                      "paddingHorizontal": 24,
                      "width": "100%",
                    },
                    false,
                  ]
                }
                testID="welcome-sign-in"
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "700",
                        "height": 58,
                        "includeFontPadding": false,
                        "lineHeight": 58,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      {
                        "color": "#4BAE8A",
                      },
                    ]
                  }
                >
                  Sign in
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`welcome in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#0b0a17",
          },
        ]
      }
    >
      <View
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            false,
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 26,
              "paddingHorizontal": 24,
              "paddingTop": 18,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "minHeight": 48,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                  },
                  {
                    "minHeight": 36,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityLabel="Expyrico"
                align="xMidYMid"
                bbHeight={36}
                bbWidth={36}
                focusable={false}
                height={36}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 36,
                      "width": 36,
                    },
                  ]
                }
                vbHeight={865}
                vbWidth={865}
                width={36}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    matrix={
                      [
                        1,
                        0,
                        0,
                        1,
                        0,
                        190,
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                      fill={
                        {
                          "payload": 4283671941,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                      fill={
                        {
                          "payload": 4294090009,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                      fill={
                        {
                          "payload": 4291968547,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                      fill={
                        {
                          "payload": 4294638330,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              style={
                {
                  "color": "#fafafa",
                  "fontSize": 22,
                  "fontWeight": "500",
                  "lineHeight": 28,
                }
              }
            >
              expyrico
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 999,
                    "borderWidth": 1,
                    "justifyContent": "center",
                    "minHeight": 34,
                    "paddingHorizontal": 14,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.08)",
                    "borderColor": "rgba(255,255,255,0.12)",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#a855f7",
                    "fontSize": 12,
                    "fontWeight": "500",
                  }
                }
              >
                Fresh
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "paddingTop": 46,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderWidth": 1,
                    "elevation": 8,
                    "justifyContent": "center",
                    "shadowColor": "#000000",
                    "shadowOffset": {
                      "height": 12,
                      "width": 0,
                    },
                    "shadowOpacity": 0.12,
                    "shadowRadius": 24,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.08)",
                    "borderColor": "rgba(255,255,255,0.12)",
                    "borderRadius": 28,
                    "height": 128,
                    "width": 128,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 10,
                    },
                    {
                      "minHeight": 94,
                    },
                  ]
                }
              >
                <RNSVGSvgView
                  accessibilityLabel="Expyrico"
                  align="xMidYMid"
                  bbHeight={94}
                  bbWidth={94}
                  focusable={false}
                  height={94}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      {
                        "flex": 0,
                        "height": 94,
                        "width": 94,
                      },
                    ]
                  }
                  vbHeight={865}
                  vbWidth={865}
                  width={94}
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      matrix={
                        [
                          1,
                          0,
                          0,
                          1,
                          0,
                          190,
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                        fill={
                          {
                            "payload": 4283671941,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                      <RNSVGPath
                        d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                        fill={
                          {
                            "payload": 4294090009,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                      <RNSVGPath
                        d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                        fill={
                          {
                            "payload": 4291968547,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                      <RNSVGPath
                        d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                        fill={
                          {
                            "payload": 4294638330,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
            <Text
              style={
                {
                  "color": "#fafafa",
                  "fontSize": 45,
                  "fontWeight": "400",
                  "lineHeight": 52,
                  "marginTop": 26,
                  "textAlign": "center",
                }
              }
            >
              Eat fresh, waste less.
            </Text>
            <Text
              style={
                {
                  "color": "rgba(250,250,250,0.7)",
                  "fontSize": 16,
                  "lineHeight": 24,
                  "marginTop": 10,
                  "textAlign": "center",
                }
              }
            >
              Keep your pantry visible, catch expiry dates early, and choose what to use next.
            </Text>
          </View>
          <View
            style={
              {
                "gap": 12,
                "marginTop": 36,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 999,
                    "borderWidth": 1.5,
                    "height": 58,
                    "overflow": "hidden",
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#F5A623",
                    "borderColor": "#F5A623",
                    "elevation": 6,
                    "shadowColor": "#F5A623",
                    "shadowOffset": {
                      "height": 8,
                      "width": 0,
                    },
                    "shadowOpacity": 0.28,
                    "shadowRadius": 18,
                  },
                ]
              }
            >
              <View
                accessibilityLabel="Create account"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "height": 58,
                      "justifyContent": "center",
                      "paddingHorizontal": 24,
                      "width": "100%",
                    },
                    false,
                  ]
                }
                testID="welcome-sign-up"
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "700",
                        "height": 58,
                        "includeFontPadding": false,
                        "lineHeight": 58,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      {
                        "color": "#2C2C28",
                      },
                    ]
                  }
                >
                  Create account
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "borderRadius": 999,
                    "borderWidth": 1.5,
                    "height": 58,
                    "overflow": "hidden",
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "rgba(75,174,138,0.12)",
                    "borderColor": "#4BAE8A",
                  },
                ]
              }
            >
              <View
                accessibilityLabel="Sign in"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "height": 58,
                      "justifyContent": "center",
                      "paddingHorizontal": 24,
                      "width": "100%",
                    },
                    false,
                  ]
                }
                testID="welcome-sign-in"
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "700",
                        "height": 58,
                        "includeFontPadding": false,
                        "lineHeight": 58,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      {
                        "color": "#4BAE8A",
                      },
                    ]
                  }
                >
                  Sign in
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`welcome in material snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f0e8ff",
          },
        ]
      }
    >
      <View
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            false,
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 26,
              "paddingHorizontal": 24,
              "paddingTop": 18,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "minHeight": 48,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                  },
                  {
                    "minHeight": 36,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityLabel="Expyrico"
                align="xMidYMid"
                bbHeight={36}
                bbWidth={36}
                focusable={false}
                height={36}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 36,
                      "width": 36,
                    },
                  ]
                }
                vbHeight={865}
                vbWidth={865}
                width={36}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    matrix={
                      [
                        1,
                        0,
                        0,
                        1,
                        0,
                        190,
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                      fill={
                        {
                          "payload": 4283671941,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                      fill={
                        {
                          "payload": 4294090009,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                      fill={
                        {
                          "payload": 4291968547,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                      fill={
                        {
                          "payload": 4281019943,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              style={
                {
                  "color": "#1d1b20",
                  "fontSize": 22,
                  "fontWeight": "500",
                  "lineHeight": 28,
                }
              }
            >
              expyrico
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 999,
                    "borderWidth": 1,
                    "justifyContent": "center",
                    "minHeight": 34,
                    "paddingHorizontal": 14,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#e0e0e0",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#65558f",
                    "fontSize": 12,
                    "fontWeight": "500",
                  }
                }
              >
                Fresh
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "paddingTop": 46,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderWidth": 1,
                    "elevation": 8,
                    "justifyContent": "center",
                    "shadowColor": "#000000",
                    "shadowOffset": {
                      "height": 12,
                      "width": 0,
                    },
                    "shadowOpacity": 0.12,
                    "shadowRadius": 24,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 28,
                    "height": 128,
                    "width": 128,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 10,
                    },
                    {
                      "minHeight": 94,
                    },
                  ]
                }
              >
                <RNSVGSvgView
                  accessibilityLabel="Expyrico"
                  align="xMidYMid"
                  bbHeight={94}
                  bbWidth={94}
                  focusable={false}
                  height={94}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      {
                        "flex": 0,
                        "height": 94,
                        "width": 94,
                      },
                    ]
                  }
                  vbHeight={865}
                  vbWidth={865}
                  width={94}
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      matrix={
                        [
                          1,
                          0,
                          0,
                          1,
                          0,
                          190,
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                        fill={
                          {
                            "payload": 4283671941,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                      <RNSVGPath
                        d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                        fill={
                          {
                            "payload": 4294090009,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                      <RNSVGPath
                        d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                        fill={
                          {
                            "payload": 4291968547,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                      <RNSVGPath
                        d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                        fill={
                          {
                            "payload": 4281019943,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
            <Text
              style={
                {
                  "color": "#1d1b20",
                  "fontSize": 45,
                  "fontWeight": "400",
                  "lineHeight": 52,
                  "marginTop": 26,
                  "textAlign": "center",
                }
              }
            >
              Eat fresh, waste less.
            </Text>
            <Text
              style={
                {
                  "color": "#65558f",
                  "fontSize": 16,
                  "lineHeight": 24,
                  "marginTop": 10,
                  "textAlign": "center",
                }
              }
            >
              Keep your pantry visible, catch expiry dates early, and choose what to use next.
            </Text>
          </View>
          <View
            style={
              {
                "gap": 12,
                "marginTop": 36,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 999,
                    "borderWidth": 1.5,
                    "height": 58,
                    "overflow": "hidden",
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#F5A623",
                    "borderColor": "#F5A623",
                    "elevation": 6,
                    "shadowColor": "#F5A623",
                    "shadowOffset": {
                      "height": 8,
                      "width": 0,
                    },
                    "shadowOpacity": 0.28,
                    "shadowRadius": 18,
                  },
                ]
              }
            >
              <View
                accessibilityLabel="Create account"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "height": 58,
                      "justifyContent": "center",
                      "paddingHorizontal": 24,
                      "width": "100%",
                    },
                    false,
                  ]
                }
                testID="welcome-sign-up"
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "700",
                        "height": 58,
                        "includeFontPadding": false,
                        "lineHeight": 58,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      {
                        "color": "#2C2C28",
                      },
                    ]
                  }
                >
                  Create account
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "borderRadius": 999,
                    "borderWidth": 1.5,
                    "height": 58,
                    "overflow": "hidden",
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "rgba(75,174,138,0.12)",
                    "borderColor": "#4BAE8A",
                  },
                ]
              }
            >
              <View
                accessibilityLabel="Sign in"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "height": 58,
                      "justifyContent": "center",
                      "paddingHorizontal": 24,
                      "width": "100%",
                    },
                    false,
                  ]
                }
                testID="welcome-sign-in"
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "700",
                        "height": 58,
                        "includeFontPadding": false,
                        "lineHeight": 58,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      {
                        "color": "#4BAE8A",
                      },
                    ]
                  }
                >
                  Sign in
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;
